force-app/main/default/objects/sfdc_account_updatedFailed__e/sfdc_account_updatedFailed__e.object-meta.xml
<CustomObject>
    <description>Platform Event that fires when publishing sfdc_account_updatedSuccess__e fails. Carries the same header identifiers plus error details for downstream error handling.</description>
    <label>sfdc_account_updatedFailed</label>
    <pluralLabel>sfdc_account_updatedFaileds</pluralLabel>
</CustomObject>