force-app/main/default/objects/sfdc_account_updatedFailed__e/fields/AcctCaseSafeID__c.field-meta.xml
<CustomField>
    <fullName>AcctCaseSafeID__c</fullName>
    <description>Case-safe 18-character Salesforce Account ID for downstream error tracking.</description>
    <label>Acct Case Safe ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>