force-app/main/default/objects/sfdc_account_updatedFailed__e/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Salesforce error status code returned by EventBus.publish() on failure (e.g. FIELD_CUSTOM_VALIDATION_EXCEPTION).</description>
    <label>Error Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>