force-app/main/default/objects/sfdc_account_updatedFailed__e/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>HTTP or Salesforce status code associated with the publish failure.</description>
    <label>Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>