force-app/main/default/objects/sfdc_account_updatedFailed__e/fields/uLab_Acct_Number__c.field-meta.xml
<CustomField>
    <fullName>uLab_Acct_Number__c</fullName>
    <description>uLab account number identifier for downstream error routing.</description>
    <label>uLab Acct Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>