force-app/main/default/objects/sfdc_account_updatedFailed__e/fields/Updated_Fields__c.field-meta.xml
<CustomField>
    <fullName>Updated_Fields__c</fullName>
    <description>JSON-serialized payload of the Account fields that were attempted to be published before the failure.</description>
    <inlineHelpText>JSON string with the changed mapped fields that triggered the failed publish attempt.</inlineHelpText>
    <label>Updated Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>